feat: Enhance UI and Gemini analysis capabilities
Introduces significant visual and functional improvements to the GoldAI Trader Pro application.

Key changes include:
- **UI Enhancements:** Refined styling for a more modern and immersive user experience, including improved scrolling, background gradients, and glass-like panel effects. Added more detailed `Cairo` font weights.
- **Gemini API Integration:** Updated `geminiService.ts` to align with potential Gemini API updates and improve error handling. Added `suggested_sl` and `suggested_tp` to `MarketAnalysis` interface and Gemini prompts.
- **Type Definitions:** Refined `Trade` and `MarketAnalysis` types for better clarity and added `UserFeedback` interface. Updated `TradingMode` enum and `LanguageCode` to simplify options.
- **Component Updates:** Modified `BotControl.tsx` to remove unnecessary state management for API keys and news avoidance, simplifying the UI. Updated `MetricCard.tsx` with subtle hover effects.

These changes aim to provide a more robust, visually appealing, and performant trading simulation platform.

--- a/index.html
+++ b/index.html
@@ -6,35 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GoldAI Trader Pro - MT5 Bot</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <style>
-      html, body {
-        height: 100%;
-        margin: 0;
+      html {
+        scroll-behavior: smooth;
       }
       body {
+        min-height: 100vh;
+        margin: 0;
         font-family: 'Cairo', sans-serif;
-        background-color: #0f172a; /* Slate 900 */
+        background-color: #020617; /* Slate 950 */
+        background-image: 
+          radial-gradient(circle at 15% 50%, rgba(245, 158, 11, 0.08), transparent 25%), 
+          radial-gradient(circle at 85% 30%, rgba(16, 185, 129, 0.05), transparent 25%);
         color: #e2e8f0;
       }
       /* Custom Scrollbar */
       ::-webkit-scrollbar {
-        width: 8px;
+        width: 6px;
+        height: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #1e293b;
+        background: rgba(15, 23, 42, 0.5);
       }
       ::-webkit-scrollbar-thumb {
-        background: #475569;
-        border-radius: 4px;
+        background: #334155;
+        border-radius: 10px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #64748b;
+        background: #475569;
       }
       .glass-panel {
-        background: rgba(30, 41, 59, 0.7);
-        backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        background: rgba(15, 23, 42, 0.65);
+        backdrop-filter: blur(16px);
+        -webkit-backdrop-filter: blur(16px);
+        border: 1px solid rgba(255, 255, 255, 0.08);
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.2);
+      }
+      .glass-panel:hover {
+        border-color: rgba(255, 255, 255, 0.15);
+      }
+      /* Premium inputs */
+      input, select, textarea {
+        background: rgba(2, 6, 23, 0.5) !important;
+        border: 1px solid rgba(148, 163, 184, 0.2) !important;
+        transition: all 0.3s ease;
+      }
+      input:focus, select:focus, textarea:focus {
+        border-color: #f59e0b !important; /* Amber 500 */
+        box-shadow: 0 0 0 2px rgba(245, 158, 11, 0.2) !important;
       }
       #root {
         min-height: 100%;
@@ -54,15 +74,16 @@
 </head>
   <body>
     <div id="root">
-        <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: #0f172a; color: #fbbf24; flex-direction: column;">
-            <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
-                <circle cx="12" cy="12" r="10" opacity="0.2" />
-                <path d="M12 2C6.48 2 2 6.48 2 12h4c0-3.31 2.69-6 6-6V2z">
-                    <animateTransform attributeName="transform" type="rotate" from="0 12 12" to="360 12 12" dur="1s" repeatCount="indefinite" />
-                </path>
-            </svg>
-            <p style="margin-top: 1rem; font-family: 'Cairo', sans-serif;">Loading GoldAI...</p>
+        <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: #020617; color: #fbbf24; flex-direction: column;">
+            <div style="position: relative; width: 80px; height: 80px;">
+                <div style="position: absolute; border: 4px solid rgba(251, 191, 36, 0.1); border-radius: 50%; width: 100%; height: 100%;"></div>
+                <div style="position: absolute; border: 4px solid #fbbf24; border-radius: 50%; width: 100%; height: 100%; border-top-color: transparent; animation: spin 1s linear infinite;"></div>
+            </div>
+            <p style="margin-top: 1.5rem; font-family: 'Cairo', sans-serif; letter-spacing: 2px; font-weight: bold; opacity: 0.8;">GOLD AI PRO</p>
         </div>
+        <style>
+            @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        </style>
     </div>
   </body>
 </html>
